kubernetes/privchats-deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: privchats-system
  labels:
    app: privchats
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: privchats
  namespace: privchats-system
  labels:
    app: privchats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: privchats
  template:
    metadata:
      labels:
        app: privchats
    spec:
      imagePullSecrets:
      - name: myregistrykey
      volumes:
        - name: privchats-nginx-config
          configMap:
            name: privchats-nginx-config-map
        - name: static
          emptyDir: {}
      containers:
      - name: nginx
        image: nginx:latest        
        ports:
        - containerPort: 80
        volumeMounts:
        - name: privchats-nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: static
          mountPath: /static
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
      - name: privchats
        image: mmoxam/inringame:privchats-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: static
          mountPath: /static
        lifecycle:
          postStart:
            exec:
              command: ["cp", "-a", "/app/static/.", "/static/"]
---

apiVersion: v1
kind: Service
metadata:
  name: privchats-svc
  namespace: privchats-system
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
spec:
  selector:
    app: privchats
  ports:
  - name: web
    port: 80
    targetPort: 80
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: privchats-ingress
  namespace: privchats-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/preserve-host: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  rules:
  - host: privchats.com
    http:
      paths:
      - path: /
        backend:
          serviceName: privchats-svc
          servicePort: 80
  tls:
    - secretName: privchats-tls-cert
      hosts:
        - privchats.com
